# bluerock

./: CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  deny.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/requirements/: audit.txt  build-cibw.txt  build.txt  lint.txt  test.txt
.github/scripts/: install-rustup.sh  lock-deps.sh  poll-github-ci.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-review.yml  labeler.yml  malcontent-actions.yml  malcontent-comment.yml  malcontent-diff.yml  promote-development.yml  release.yml  scorecard.yml  secret-scanning.yml  security-audit.yml  staging-tests.yml  stale.yml  test-release.yml
acoustic/: Cargo.toml  run-tests-oss.py
acoustic/python/: .gitignore  CONFIG.md  EVENTS.md  MANIFEST.in  PYPI_README.md  bluerock-oss.json  pyproject.toml  setup.py  test_oss_requirements.txt
acoustic/python-oss/: .gitignore  Cargo.toml  pyproject.toml
acoustic/python-oss/bluerock_oss/: __init__.py
acoustic/python-oss/src/: lib.rs
acoustic/python/bluepython/: __main__.py  backend.py  cfg.py  common.py  import_hooks.py  installer.py  mcp_hooks.py  utils.py  wrapper.py
acoustic/python/bluepython/sdk/: __init__.py
acoustic/python/tests/: conftest.py  test_bluepython_import.py  test_import.py  test_mcp_tool.py  test_reload_import.py  test_smoke.py
acoustic/sensor_tests/: common.py  python.py
examples/: README.md  run-examples.py
examples/ai-hooks/mcp-monitoring/: README.md  mcp_client.py  mcp_http_client.py  mcp_server.py  mcp_sse_client.py
examples/core-hooks/import-monitoring/: README.md  import_monitoring.py
examples/mcp/: README.md  mcp_client.py  mcp_file_server.py  mcp_linux_admin.py  mcp_test_server.py  weatherMCP-client.py
observe/: README.md
observe/deploy/: deploy.sh  docker-compose.yml  loki-config.yml  spoolfile2loki-dir.yaml  spoolfile2loki-mock.yaml
observe/deploy/boards/: acoustic.json
observe/deploy/spool/: acoustic-lite-42911-42911.ndjson
observe/spoolfile2loki/: .gitignore  Dockerfile  README.md  config.yaml.example  go.mod  go.sum  justfile
observe/spoolfile2loki/cmd/spoolfile2loki/: main.go
observe/spoolfile2loki/internal/: config.go  forwarder.go  logger.go  loki.go  mockdata.go  state.go
observe/spoolfile2loki/internal/testdata/: acoustic-lite.json
